# XZZPCB-Layer-Viewer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  REFACTORING_ROADMAP.md  Rendering Optimizations from Blend2D.md  STYLEGUIDE.md  build.sh  example-main.cpp  imgui.ini  index.md  init-config-build-and-run.sh  ninja-and-run.sh  old-REFACTORING_ROADMAP.md  refactoring_roadmap.md  vcpkg.json
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.hpp  BLRenderer.cpp  BLRenderer.h  BLRenderer.hpp  BoardDataManager.cpp  BoardDataManager.hpp  CMakeLists.txt  Config.cpp  Config.hpp  ControlSettings.cpp  ControlSettings.hpp  Events.cpp  Events.hpp  ImGuiManager.cpp  ImGuiManager.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  InputActions.cpp  InputActions.hpp  Renderer.cpp  Renderer.hpp  SDLRenderer.cpp  SDLRenderer.hpp
src/pcb/: Board.cpp  Board.hpp  BoardLoaderFactory.cpp  BoardLoaderFactory.hpp  IBoardLoader.hpp  PcbLoader.cpp  PcbLoader.hpp  XZZPCBLoader.cpp  XZZPCBLoader.hpp
src/pcb/elements/: Arc.cpp  Arc.hpp  Component.cpp  Component.hpp  Element.cpp  Element.hpp  Net.hpp  Pin.cpp  Pin.hpp  TextLabel.cpp  TextLabel.hpp  Trace.cpp  Trace.hpp  Via.cpp  Via.hpp
src/pcb/processing/: OrientationProcessor.cpp  OrientationProcessor.hpp  PinResolver.cpp  PinResolver.hpp  oldOrientationProcessor.hpp  oldpin_rotation_calc.cpp
src/render/: BLPathCache.cpp  BLPathCache.hpp  CMakeLists.txt  LODManager.hpp  PcbRenderer.cpp  PcbRenderer.hpp  RenderContext.cpp  RenderContext.hpp  RenderManager.cpp  RenderManager.hpp  RenderPipeline.cpp  RenderPipeline.cpp.bak1  RenderPipeline.cpp.unused  RenderPipeline.hpp  RenderPipeline.unused
src/ui/: CMakeLists.txt  MainMenuBar.cpp  MainMenuBar.hpp
src/ui/interaction/: InteractionManager.cpp  InteractionManager.hpp  InteractionTool.hpp  NavigationTool.cpp  NavigationTool.hpp
src/ui/windows/: PCBViewerWindow.cpp  PCBViewerWindow.hpp  PcbDetailsWindow.cpp  PcbDetailsWindow.hpp  SettingsWindow.cpp  SettingsWindow.hpp
src/utils/: CMakeLists.txt  ColorUtils.cpp  ColorUtils.hpp  Constants.hpp  GeometryUtils.hpp  OpenGLUtils.hpp  PerformanceTest.hpp  SpatialIndex.hpp  StringUtils.cpp  StringUtils.hpp  Vec2.hpp  des.cpp  des.h  nerd_icons.h
src/view/: CMakeLists.txt  Camera.cpp  Camera.hpp  Grid.cpp  Grid.hpp  GridSettings.cpp  GridSettings.hpp  Viewport.cpp  Viewport.hpp  main.cpp
